# nf-build-model

./: .gitignore  README.md  clean.py  env.yaml  main.nf  normalize_reference.py  pyproject.toml
.github/: CODEOWNERS
modules/: build_index.nf  decompress.nf
scripts/: associate_sample_labels.py  build_iimi_model.r  clean_csv.py  combine_unreliable_regions.py  extract_nucelotide_info.py  extract_sample_viruses.py  extract_sequence_info.py  find_mapped_regions.py  find_unreliable_regions_nucleotide_percentage.r  finish.py  fragment_reference.py  match.py  match_sequence_info.py  normalize_reference.py  organize_sequences.py  paths.py  reduce_reference.py  repair.py  rle_conversion.r  rle_encode_mapping_data.r  segment_reference.py
scripts/utils/: __init__.py  find_files.py
subworkflows/: build_unreliable.nf  collapse.nf  collapse_reference.nf  find_unreliable_regions.nf  map_samples.nf  test_collapse_reference.nf  test_unreliable_regions.nf
test/: test_collapse_reference.nf  test_find_unreliable_regions.nf  test_map_samples.nf
