[project]
name = "nf-build-model"
version = "0.0.0"
description = ""
authors = [
    {name = "Ian Boyes",email = "dev@igboyes.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython (>=1.85,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.5"

